objects/Vendor_Relationship__c.object
<CustomObject>
    <description>Junction object used to associated members with their vendors</description>
    <fields>
        <fullName>Data_Dictionary_Name__c</fullName>
        <label>Data Dictionary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Control_Total_Filename__c</fullName>
        <label>File Control Total Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Control_Totals__c</fullName>
        <label>File Control Totals</label>
        <picklist>
            <picklistValues>
                <fullName>Included in Footer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Control Totals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Documentation__c</fullName>
        <label>File Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Data Dictionary and File Layout Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Dictionary Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Layout Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Due_Day_of_Month__c</fullName>
        <label>File Due Day of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Folder__c</fullName>
        <label>File Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <label>File Format</label>
        <picklist>
            <picklistValues>
                <fullName>TXT - Fixed Width</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TXT - Delimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCDB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Layout_Name__c</fullName>
        <label>File Layout Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_Mask_Raw__c</fullName>
        <label>File Name Mask - Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_Mask_Submitted__c</fullName>
        <label>File Name Mask - Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_Translation_Notes__c</fullName>
        <label>File Name Translation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Receipt_Frequency__c</fullName>
        <label>File Receipt Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biweekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Submission_Notes__c</fullName>
        <label>File Submission Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Text_Qualifier__c</fullName>
        <label>File Text Qualifier</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Transmission_Type__c</fullName>
        <label>File Transmission Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABCO SFTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson SFTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encrypted CD-ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor SFTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verisk SFTP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <formula>Project__r.Institution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Vendors</relationshipLabel>
        <relationshipName>Vendor_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Short_Vendor_Relationship_Description__c</fullName>
        <description>Brief summary of vendor&apos;s relationship with Advisory Board</description>
        <label>Short Vendor Relationship Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Data_Status__c</fullName>
        <label>Vendor Data Status</label>
        <picklist>
            <picklistValues>
                <fullName>Data Through Other Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical and Ongoing Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical Data Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Data Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_End_Date__c</fullName>
        <description>End date of member&apos;s relationship with this vendor. Leave blank if ongoing.</description>
        <label>Vendor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Relationship_Notes__c</fullName>
        <label>Vendor Relationship Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Relationship_Repricing_Rules__c</fullName>
        <label>Vendor Relationship Repricing Rules</label>
        <picklist>
            <picklistValues>
                <fullName>Repricing Not Permitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repricing Permitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It&apos;s Complicated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Relationship_Type__c</fullName>
        <label>Vendor Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biometrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCLF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAP/Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligibility Data Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging Preauthorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Loss Insurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephonic or Online Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Start_Date__c</fullName>
        <description>Beginning date of member&apos;s relationship with this vendor</description>
        <label>Vendor Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Delivery Projects</relationshipLabel>
        <relationshipName>Vendor_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Vendor Relationship</label>
    <nameField>
        <displayFormat>VR-{00000}</displayFormat>
        <label>Vendor Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>